force-app/main/default/objects/Bulk_Cart_Update_Notification__e/Bulk_Cart_Update_Notification__e.object-meta.xml
<CustomObject>
    <label>Bulk Cart Update Notification</label>
    <pluralLabel>Bulk Cart Update Notifications</pluralLabel>
</CustomObject>