force-app/main/default/objects/Bulk_Cart_Update_Notification__e/fields/Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>Cart_Id__c</fullName>
    <label>Cart Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>