force-app/main/default/objects/Bulk_Cart_Update_Notification__e/fields/SobjectType__c.field-meta.xml
<CustomField>
    <fullName>SobjectType__c</fullName>
    <label>Sobject Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>